# azi-music-pc

./: .env  .gitignore  README.md  babel.config.cjs  electron-builder.json5  index.html  package.json  pnpm-lock.yaml  tsconfig.json  tsconfig.node.json  vite.config.ts
electron/main/: dev-app-update.yml  index.ts  tray.ts  update.ts  window.ts
electron/preload/: index.ts
icons/: icon.icns
public/: splash.html
src/: App.vue  main.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/App/: songlist.json
src-tauri/src/: command.rs  download.rs  main.rs
src/api/: index.ts
src/api/common/: index.ts
src/api/home/: index.ts
src/api/kugou/: index.ts
src/api/kuwo/: index.ts
src/api/netease/: index.ts
src/api/playlist/: index.ts
src/api/qq/: index.ts
src/assets/iconfont/: iconfont.css
src/components/common/: contextmenu.vue  fontIcon.vue  index.ts  loadingIcon.vue  playlistBox.vue  svgIcon.vue
src/components/home/: itemTitle.vue  listItem.vue  mvItem.vue  newItem.vue
src/components/mdi-icon/: index.vue
src/data/: system.json
src/layout/: index.vue
src/layout/footer/: index.vue
src/layout/header/: index.vue
src/layout/navbar/: index.vue
src/lib/directives/: index.ts
src/lib/hooks/: useCollection.ts  useContextMenu.tsx  (+5 more)
src/router/: index.ts
src/store/: index.ts
src/style/: _contextmenu.scss  _elementplus.scss  _mixins.scss  _variables.scss  contextmenu.scss  global.scss
src/theme/: theme.ts
src/typings/: api.ts  home.ts  player.ts  playlist.ts  source.d.ts  vite-env.d.ts  vue-component.d.ts
test/utils/: common.spec.ts
(+38 files in other folders)
